support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_no_access.i
%module xxx

class Bar : foo {
};
